--- a/Home.css
+++ b/Home.css
@@ -380,8 +380,8 @@ button#prev {
     text-align: left;
     box-shadow: 0px 5px 10px #3337;
     border-radius: 5px;
-    width: 350px;
-    margin-left: 50px;
+    width: 400px;
+    margin-right: 30px;
     padding: 20px;
   }
 
