--- a/Kontak.css
+++ b/Kontak.css
@@ -331,6 +331,7 @@ footer {
   footer {
     position: static;
     display: flex;
+    margin-left: -15px;
   }
 
   .footer-distributed .footer-left, .footer-distributed .footer-center, .footer-distributed .footer-right {
