--- a/Partner.css
+++ b/Partner.css
@@ -375,12 +375,15 @@ header .Navi li a:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background: #e51e2a;
+    background: #ffd93d;
     display: flex;
     z-index: 10;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 3em;
+    line-height: 1.5em;
+    font-variant: all-petite-caps;
   }
 
   section {
@@ -409,98 +412,160 @@ header .Navi li a:hover {
 
   }
 
-  footer {
-    position: static;
+  footer{
+    position: relative;
+    bottom: 0px;
   }
-
-  .footer-distributed .footer-left, .footer-distributed .footer-center, .footer-distributed .footer-right {
-    display: block;
-    width: 100%;
-    margin-bottom: 40px;
-    text-align: center;
+  .main-content{
+    flex-wrap: wrap;
+    flex-direction: column;
   }
-
-  .footer-distributed .footer-left img {
-    width: 150px;
-    height: 150px;
-  }
-
-  .footer-distributed .footer-center i {
-    margin-left: 0;
+  .main-content .box{
+    margin: 5px 0;
   }
 
 }
 
 
-footer {
+footer{
   position: relative;
-  bottom: 0;
+  bottom: 0px;
+  width: 100%;
+  background: #111;
 }
-
-.footer-distributed {
-  background: #2d2a30;
-  box-sizing: border-box;
-  widows: 100%;
-  text-align: left;
-  font: bold 16px 'Poppins',sans-serif;
-  padding: 20px 20px 30px 20px;
-  margin-top: 80px;
+.main-content{
+  display: flex;
 }
-
-.footer-distributed .footer-left, .footer-distributed .footer-center, .footer-distributed .footer-right {
-  display: inline-block;
-  vertical-align: top;
+.main-content .box{
+  flex-basis: 50%;
+  padding: 10px 20px;
 }
-
-.footer-distributed .footer-left {
-  width: 30%;
+.box h2{
+  font-size: 1.125rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: white;
 }
-
-.footer-distributed .footer-center {
-  width: 35%;
+.box .content{
+  margin: 20px 0 0 0;
+  position: relative;
 }
-
-.footer-distributed .footer-center i{
-  background-color: #33383b;
-  color: #ffff;
-  font-size: 25px;
-  width: 38px;
-  height: 38px;
+.box .content:before{
+  position: absolute;
+  content: '';
+  top: -10px;
+  height: 2px;
+  width: 100%;
+  background: #1a1a1a;
+}
+.box .content:after{
+  position: absolute;
+  content: '';
+  height: 2px;
+  width: 15%;
+  background: #f12020;
+  top: -10px;
+}
+.left .content p{
+  text-align: justify;
+  color: white;
+}
+.left .content .social{
+  margin: 20px 0 0 0;
+}
+.left .content .social a{
+  padding: 0 2px;
+}
+.left .content .social a span{
+  height: 40px;
+  width: 40px;
+  background: #1a1a1a;
+  line-height: 40px;
+  text-align: center;
+  font-size: 18px;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+.left .content .social a span:hover{
+  background: #f12020;
+}
+.center .content .fas{
+  font-size: 1.4375rem;
+  background: #1a1a1a;
+  height: 45px;
+  width: 45px;
+  line-height: 45px;
   text-align: center;
   border-radius: 50%;
-  line-height: 42px;
-  margin: 10px 15px;
-  vertical-align: middle;
+  transition: 0.3s;
+  cursor: pointer;
+  color: white;
+}
+.center .content .fas:hover{
+  background: #f12020;
+}
+.center .content .text{
+  font-size: 1.0625rem;
+  font-weight: 500;
+  padding-left: 10px;
+  color: white;
+}
+.center .content .phone{
+  margin: 15px 0;
+}
+.right form .text{
+  font-size: 1.0625rem;
+  margin-bottom: 2px;
+  color: #656565;
+  color: white;
 }
 
-.footer-distributed .footer-center i.fa-envelope {
-  font-size: 17px;
-  line-height: 38px;
+.right form .msg{
+  margin-top: 10px;
 }
-
-.footer-distributed .footer-center p{
-  display: inline-block;
-  color: #ffff;
-  vertical-align: middle;
-  margin: 0;
+.right form input, .right form textarea{
+  width: 100%;
+  font-size: 1.0625rem;
+  background: #151515;
+  padding-left: 10px;
+  border: 1px solid #222222;
 }
-
-.footer-distributed .footer-right {
-  width: 30%;
+.right form input:focus,
+.right form textarea:focus{
+  outline-color: #3498db;
 }
-
-.footer-distributed .footer-company-about {
-  line-height: 20px;
-  color: #92999f;
-  font-size: 13px;
-  font-weight: normal;
-  margin: 0;
+.right form input{
+  height: 35px;
 }
-
-.footer-distributed .footer-company-about span {
-  display: block;
-  color: #ffff;
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 20px;
+.right form .btn{
+  margin-top: 10px;
+}
+.right form .btn button{
+  height: 40px;
+  width: 200%;
+  border: none;
+  outline: none;
+  background: #576CBC;
+  font-size: 1.0625rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: .3s;
+}
+.right form .btn button:hover{
+  background: #000;
+}
+.bottom center{
+  padding: 5px;
+  font-size: 0.9375rem;
+  background: #151515;
+}
+.bottom center span{
+  color: #656565;
+}
+.bottom center a{
+  color: #f12020;
+  text-decoration: none;
+}
+.bottom center a:hover{
+  text-decoration: underline;
 }
