--- a/Profile.css
+++ b/Profile.css
@@ -146,12 +146,18 @@ header .Navi li a:hover {
 }
 
 .mvv-contianer .mvv-block .content p {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 200;
 }
 
+.mvv-contianer .mvv-block .content .Visi {
+  font-size: 20px;
+  font-weight: 200;
+
+}
+
 .mvv-contianer .mvv-block .content ul li{
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 200;
 }
 
@@ -318,6 +324,17 @@ header .Navi li a:hover {
     padding-right: 20px;
   }
 
+  .mvv-contianer .mvv-block .content .Visi {
+    padding-left: 30px;
+    font-size: 18px;
+    font-weight: 200;
+  }
+
+  .mvv-contianer .mvv-block .content ul li{
+    font-size: 18px;
+    font-weight: 200;
+  }
+
   footer{
     position: relative;
     bottom: 0px;
@@ -436,7 +453,6 @@ footer{
   background: #151515;
   padding-left: 10px;
   border: 1px solid #222222;
-  color: white;
 }
 .right form input:focus,
 .right form textarea:focus{
@@ -461,4 +477,19 @@ footer{
 }
 .right form .btn button:hover{
   background: #000;
+}
+.bottom center{
+  padding: 5px;
+  font-size: 0.9375rem;
+  background: #151515;
+}
+.bottom center span{
+  color: #656565;
+}
+.bottom center a{
+  color: #f12020;
+  text-decoration: none;
+}
+.bottom center a:hover{
+  text-decoration: underline;
 }
