--- a/Portofolio.css
+++ b/Portofolio.css
@@ -108,7 +108,7 @@ button#prev {
 }
 .testimonial-container p {
   color: #8c8c90;
-  text-align: center;
+  text-align: justify;
   font-size: 0.9em;
   line-height: 2em;
   letter-spacing: 0.05em;
