--- a/Profile.css
+++ b/Profile.css
@@ -104,81 +104,6 @@ header .Navi li a:hover {
   clip-path: circle(600px at right);
 }
 
-.mvv-contianer {
-  max-width: 80%;
-  margin: 50px auto 0;
-}
-
-.mvv-contianer .mvv-block {
-  margin-bottom: 50px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.mvv-contianer .mvv-block .image {
-  flex: 0 0 auto;
-  width: 400px;
-  overflow: hidden;
-  margin-bottom:30px;
-}
-
-.mvv-contianer .mvv-block .image img {
-  width: 100%;
-
-  transition: .3s;
-  transform: scale(1);
-}
-
-.mvv-contianer .mvv-block .image:hover img {
-  transform: scale(1.05);
-}
-
-.mvv-contianer .mvv-block .content {
-  flex: 0 0 auto;
-  width: calc(100% - 400px);
-  box-sizing: border-box;
-}
-
-.mvv-contianer .mvv-block .content h5 {
-  font: 60px;
-  font-weight: 800;
-  margin-bottom: 10px;
-}
-
-.mvv-contianer .mvv-block .content p {
-  font-size: 20px;
-  font-weight: 200;
-}
-
-.mvv-contianer .mvv-block .content .Visi {
-  font-size: 20px;
-  font-weight: 200;
-
-}
-
-.mvv-contianer .mvv-block .content ul li{
-  font-size: 20px;
-  font-weight: 200;
-}
-
-@media screen and (min-width: 1024px) {
-  .mvv-contianer .mvv-block:nth-child(odd) .image {
-    order: 1;
-  }
-  .mvv-contianer .mvv-block:nth-child(even) .image {
-    order: 2;
-  }
-  .mvv-contianer .mvv-block:nth-child(odd) .content {
-    order: 2;
-    padding-left: 30px;
-  }
-  .mvv-contianer .mvv-block:nth-child(even) .content {
-    order: 1;
-    padding-right: 30px;
-  }
-}
-
 .Ourserv {
   padding: 15px 9%;
   padding-bottom: 100px;
@@ -218,6 +143,13 @@ header .Navi li a:hover {
 
 
 @media (max-width:991px){
+
+  .Dolar .do {
+    text-align: center;
+    margin-top: 30px;
+    font-size: 10px;
+    font-weight: 400;
+  }
 
   .container  {
     max-width: 100%;
@@ -307,34 +239,6 @@ header .Navi li a:hover {
 
   }
 
-  .mvv-contianer {
-    max-width: 80%;
-    margin: 50px auto;
-    display: flex;
-    flex-direction: column;
-  }
-
-
-  .mvv-contianer .mvv-block .content {
-    box-sizing: border-box;
-    display: flex;
-    flex-wrap: initial;
-  }
-
-  .mvv-contianer .mvv-block .content h5 {
-    padding-right: 20px;
-  }
-
-  .mvv-contianer .mvv-block .content .Visi {
-    padding-left: 40px;
-    font-size: 18px;
-    font-weight: 200;
-  }
-
-  .mvv-contianer .mvv-block .content ul li{
-    font-size: 18px;
-    font-weight: 200;
-  }
 
   footer{
     position: relative;
@@ -493,4 +397,94 @@ footer{
 }
 .bottom center a:hover{
   text-decoration: underline;
+}
+
+.wrapper{
+  display: grid;
+  margin: 100px 100px auto;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  margin-bottom: 100px;
+}
+
+.Dolar .do {
+  text-align: center;
+  margin-top: 30px;
+  font-size: 30px;
+  font-weight: 400;
+}
+
+@media (max-width: 700px) {
+  .wrapper{
+    margin: 100px auto;
+  }
+}
+.wrapper .lox{
+  width: 340px;
+  margin: 0 auto;
+  position: relative;
+  perspective: 1000px;
+}
+.wrapper .lox .front-face{
+  background: #fff;
+  height: 220px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 0px 5px 20px 0px rgba(0, 81, 250, 0.1);
+  transition: all 0.5s ease;
+}
+.lox .front-face .icon{
+  height: 80px;
+  align-items: center;
+  text-align: center;
+
+}
+.lox .front-face .icon i{
+  font-size: 65px;
+  align-items: center;
+  text-align: center;
+}
+.lox .front-face span,
+.lox .back-face span{
+  font-size: 22px;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-align: center;
+}
+.lox .front-face .icon i,
+.lox .front-face span{
+  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.lox .back-face{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  height: 300px;
+  width: 100%;
+  padding: 30px;
+  color: #fff;
+  opacity: 0;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  transform: translateY(110px) rotateX(-90deg);
+  box-shadow: 0px 5px 20px 0px rgba(0, 81, 250, 0.1);
+  transition: all 0.5s ease;
+}
+.lox .back-face p{
+  margin-top: 10px;
+  text-align: justify;
+}
+.lox:hover .back-face{
+  opacity: 1;
+  transform: rotateX(0deg);
+}
+.lox:hover .front-face{
+  opacity: 0;
+  transform: translateY(-110px) rotateX(90deg);
 }
