--- a/Portofolio.css
+++ b/Portofolio.css
@@ -311,7 +311,6 @@ footer{
   background: #151515;
   padding-left: 10px;
   border: 1px solid #222222;
-  color: white;
 }
 .right form input:focus,
 .right form textarea:focus{
@@ -337,4 +336,18 @@ footer{
 .right form .btn button:hover{
   background: #000;
 }
-
+.bottom center{
+  padding: 5px;
+  font-size: 0.9375rem;
+  background: #151515;
+}
+.bottom center span{
+  color: #656565;
+}
+.bottom center a{
+  color: #f12020;
+  text-decoration: none;
+}
+.bottom center a:hover{
+  text-decoration: underline;
+}
