--- a/Home.css
+++ b/Home.css
@@ -123,9 +123,9 @@ header .Navi li a:hover {
 }
 
 .proval {
-  padding: 15px 9%;
-  padding-bottom: 100px;
-  padding-top: 50px;
+  width: 100%;
+  padding:0 8%;
+  padding-top: 80px;
 }
 
 .proval h3 {
@@ -143,10 +143,10 @@ header .Navi li a:hover {
 .proval .baganproval {
   display: grid;
   grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-  gap:15px;
+  gap:20px;
 }
 
-.proval .baganproval .baganprov {
+.baganproval .baganprov {
   box-shadow: 0px 5px 10px #3337;
   border-radius: 5px;
   background: #fff;
